components/mumble/mumble-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mumble-web
  namespace: mumble
spec:
  selector:
    app: mumble-web
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
